create static page for all fcc lessons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <ul>
         <h2>Front End Development Libraries</h2>
         <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/call-out-optional-actions-with-btn-info.html">call-out-optional-actions-with-btn-info</a></li>
-        
+        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/add-font-awesome-icons-to-all-of-our-buttons.html">add-font-awesome-icons-to-all-of-our-buttons</a></li>
+        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/add-font-awesome-icons-to-our-buttons.html">add-font-awesome-icons-to-our-buttons</a></li>
+        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/center-text-with-bootstrap.html">center-text-with-bootstrap</a></li>
+        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/create-a-block-element-bootstrap-button.html">create-a-block-element-bootstrap-button</a></li>
     </ul>
     <h2></h2>
     <ul></ul>
