add three directories to the index page of fcc practice

--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 <body>
     <h1>Free Code Camp lessons</h1>
     <ul>
-        <h2>Front End Development Libraries</h2>
-        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/call-out-optional-actions-with-btn-info.html" target="_blank">call-out-optional-actions-with-btn-info</a></li>
-        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/add-font-awesome-icons-to-all-of-our-buttons.html" target="_blank">add-font-awesome-icons-to-all-of-our-buttons</a></li>
-        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/add-font-awesome-icons-to-our-buttons.html" target="_blank">add-font-awesome-icons-to-our-buttons</a></li>
-        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/center-text-with-bootstrap.html" target="_blank">center-text-with-bootstrap</a></li>
-        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/create-a-block-element-bootstrap-button.html " target="_blank">create-a-block-element-bootstrap-button</a></li>
+        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/" target="_blank"><h2>Front End Development Libraries</h2></a></li>
+        <li><a href="../free-code-camp-practice/free-code-camp/JavaScript Algorithms and Data Structures/" target="_blank"><h2>JavaScript Algorithms and Data Structures</h2></a></li>
+        <li><a href="../free-code-camp-practice/free-code-camp/Responsive Web Design/" target="_blank"><h2>Responsive Web Design</h2></a></li>
     </ul>
     <h2></h2>
     <ul></ul>
