--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 <body>
     <h1>Free Code Camp lessons</h1>
     <ul>
-        <li><a href="../free-code-camp-practice/free-code-camp/Front End Development Libraries/.." target="_blank"><h2>Front End Development Libraries</h2></a></li>
-        <li><a href="../free-code-camp-practice/free-code-camp/JavaScript Algorithms and Data Structures/.." target="_blank"><h2>JavaScript Algorithms and Data Structures</h2></a></li>
-        <li><a href="../free-code-camp-practice/free-code-camp/Responsive Web Design/.." target="_blank"></a><h2>Responsive Web Design</h2></li>
+        <li><a href="free-code-camp/Front End Development Libraries/" target="_blank"><h2>Front End Development Libraries</h2></a></li>
+        <li><a href="free-code-camp/JavaScript Algorithms and Data Structures/" target="_blank"><h2>JavaScript Algorithms and Data Structures</h2></a></li>
+        <li><a href="/free-code-camp/Responsive Web Design/" target="_blank"></a><h2>Responsive Web Design</h2></li>
     </ul>
-    <h2></h2>
-    <ul></ul>
-    <h2></h2>
-    <ul></ul>
 </body>
 </html>
