six more lessons from fcc 25 and 26 april

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Free Code Camp lessons</h1>
     <ul>
-        <li><a href="free-code-camp/FrontEndDevelopmentLibraries/" target="_blank"><h2>Front End Development Libraries</h2></a></li>
-        <li><a href="free-code-camp/JavaScriptAlgorithmsandDataStructures/" target="_blank"><h2>JavaScript Algorithms and Data Structures</h2></a></li>
-        <li><a href="free-code-camp/ResponsiveWebDesign/" target="_blank"></a><h2>Responsive Web Design</h2></li>
+        <li><a href="Front-End-Development-Libraries.html" target="_blank"><h2>Front End Development Libraries</h2></a></li>
+        <li><a href="Java-Script-Algorithms.html" target="_blank"><h2>JavaScript Algorithms and Data Structures</h2></a></li>
+        <li><a href="Responsive-Web-Design.html" target="_blank"><h2>Responsive Web Design</h2></a></li>
     </ul>
 </body>
 </html>
