three more lessons from fcc june first

--- a/FrontEndDevelopmentLibraries.html
+++ b/FrontEndDevelopmentLibraries.html
@@ -26,6 +26,12 @@
     <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/use-responsive-design-with-bootstrap-fluid-containers.html" target="_blank">use-responsive-design-with-bootstrap-fluid-containers</a></li>
     <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/use-the-bootstrap-grid-to-put-elements-side-by-side.html" target="_blank">use-the-bootstrap-grid-to-put-elements-side-by-side</a></li>
     <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/warn-your-users-of-a-dangerous-action-with-btn-danger.html" target="__blank">warn-your-users-of-a-dangerous-action-with-btn-danger</a></li>
+    <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/create-a-bootstrap-headline.html" target="_blank">create-a-bootstrap-headline</a></li>
+    <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/create-a-bootstrap-row.html" target="_blank">create-a-bootstrap-row</a></li>
+    <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/house-our-page-within-a-bootstrap-container-fluid-div.html" target="_blank">house-our-page-within-a-bootstrap-container-fluid-div</a></li>
+    <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/line-up-form-elements-responsively-with-bootstrap.html" target="_blank">line-up-form-elements-responsively-with-bootstrap</a></li>
+    <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/split-your-bootstrap-row.html" target="_blank">split-your-bootstrap-row</a></li>
+    <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/style-text-inputs-as-form-controls.html" target="_blank">style-text-inputs-as-form-controls</a></li>
     </ul>
     </main>
 </body>
