three more lessons from fcc may day

--- a/FrontEndDevelopmentLibraries.html
+++ b/FrontEndDevelopmentLibraries.html
@@ -32,6 +32,7 @@
     <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/line-up-form-elements-responsively-with-bootstrap.html" target="_blank">line-up-form-elements-responsively-with-bootstrap</a></li>
     <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/split-your-bootstrap-row.html" target="_blank">split-your-bootstrap-row</a></li>
     <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/style-text-inputs-as-form-controls.html" target="_blank">style-text-inputs-as-form-controls</a></li>
+    <li><a href="../free-code-camp-practice/free-code-camp/FrontEndDevelopmentLibraries/create-bootstrap-wells.html" target="_blank">create-bootstrap-wells</a></li>
     </ul>
     </main>
 </body>
